# cone-presentation

./: README.md  cone-presentation.cabal
presentation/html/: index.html  model.json  script.json
presentation/html/js/: ConePresentation.js
presentation/html/prefs/: default.json
src/: Main.hs  Presentation_V2.hs  RestHandlers.hs  Types.hs
